src/snapshots/transmute__resolver__tests__rebinding-xml.snap
---
source: src/resolver.rs
expression: "XmlWriter::new(&ast, &symbols).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">x</ident>
      <ident id="ident:1">add</ident>
      <ident id="ident:2">div</ident>
      <ident id="ident:3">eq</ident>
      <ident id="ident:4">ge</ident>
      <ident id="ident:5">gt</ident>
      <ident id="ident:6">le</ident>
      <ident id="ident:7">lt</ident>
      <ident id="ident:8">mul</ident>
      <ident id="ident:9">neg</ident>
      <ident id="ident:10">neq</ident>
      <ident id="ident:11">sub</ident>
      <ident id="ident:12">boolean</ident>
      <ident id="ident:13">number</ident>
      <ident id="ident:14">void</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="13">
      <let>
        <identifier ref="ident:0" line="1" column="5" start="4" len="1">x</identifier>
        <expression line="1" column="9" start="8" len="4">
          <expr id="expr:0" line="1" column="9" start="8" len="4">
            <bool>true</bool>
          </expr>
        </expression>
      </let>
    </stmt>
    <stmt id="stmt:1" line="1" column="15" start="14" len="10">
      <let>
        <identifier ref="ident:0" line="1" column="19" start="18" len="1">x</identifier>
        <expression line="1" column="23" start="22" len="1">
          <expr id="expr:1" line="1" column="23" start="22" len="1">
            <number>1</number>
          </expr>
        </expression>
      </let>
    </stmt>
    <stmt id="stmt:2" line="1" column="26" start="25" len="6">
      <expr id="expr:4" line="1" column="26" start="25" len="5">
        <call line="1" column="26" start="25" len="5" ident-ref="ident:1" name="add" target-id="native:add:number:number:number">
          <parameters>
            <parameter>
              <expr id="expr:2" line="1" column="26" start="25" len="1">
                <identifier-ref id="ident-ref:0" ident-ref="ident:0" target-id="stmt:1">x</identifier-ref>
              </expr>
            </parameter>
            <parameter>
              <expr id="expr:3" line="1" column="30" start="29" len="1">
                <number>1</number>
              </expr>
            </parameter>
          </parameters>
        </call>
      </expr>
    </stmt>
  </ast>
</unit>
