src/snapshots/transmute__resolver__tests__struct_use.snap
---
source: src/resolver.rs
expression: "(types, bindings)"
---
(
    [
        Struct(
            StmtId {
                id: 0,
            },
            SymbolId {
                id: 16,
            },
        ),
        Number,
        Boolean,
        Void,
        Function,
        None,
    ],
    {
        Expression(
            ExprId {
                id: 0,
            },
        ): TypeId {
            id: 3,
        },
        Parameter(
            StmtId {
                id: 1,
            },
            0,
        ): TypeId {
            id: 0,
        },
        Parameter(
            StmtId {
                id: 1,
            },
            1,
        ): TypeId {
            id: 0,
        },
        Field(
            StmtId {
                id: 0,
            },
            0,
        ): TypeId {
            id: 1,
        },
        Field(
            StmtId {
                id: 0,
            },
            1,
        ): TypeId {
            id: 1,
        },
    },
)
