src/snapshots/transmute__resolver__tests__while_expected_boolean_condition_got_boolean.snap
---
source: src/resolver.rs
expression: "(types, bindings)"
---
(
    [
        None,
        Number,
        Boolean,
        Void,
    ],
    {
        Expression(
            ExprId {
                id: 0,
            },
        ): TypeId {
            id: 2,
        },
        Expression(
            ExprId {
                id: 1,
            },
        ): TypeId {
            id: 3,
        },
        Expression(
            ExprId {
                id: 2,
            },
        ): TypeId {
            id: 3,
        },
    },
)
